--- a/config.gradle
+++ b/config.gradle
@@ -1,7 +1,9 @@
 ext.app = [
         "applicationId"                : "cc.buddies.reactapp",
         "versionCode"                  : 1,
-        "versionName"                  : "1.0.0"
+        "versionName"                  : "1.0.0",
+
+        "bundleVersion"                : "1.0.0",
 ]
 
 ext.versions = [
@@ -22,5 +24,9 @@ ext.versions = [
         "androidx_recycleview"         : "1.1.0",
         "androidx_fragment"            : "1.2.2",
         "androidx_viewpager2"          : '1.0.0',
-        "androidx_swiperefreshlayout"  : '1.0.0'
+        "androidx_swiperefreshlayout"  : '1.0.0',
+        "androidx_work_runtime"        : '2.3.4',
+
+        "commons_io"                   : "2.6",
+        "commons_compress"             : "1.20",
 ]
