--- a/gradle.properties
+++ b/gradle.properties
@@ -26,3 +26,8 @@ android.enableJetifier=true
 
 # Version of flipper SDK to use with React Native
 FLIPPER_VERSION=0.33.1
+
+APP_RELEASE_STORE_FILE=debug.keystore
+APP_RELEASE_STORE_PASSWORD=android
+APP_RELEASE_KEY_ALIAS=androiddebugkey
+APP_RELEASE_KEY_PASSWORD=android
