--- a/app/build.gradle
+++ b/app/build.gradle
@@ -137,9 +137,6 @@ dependencies {
 
     //noinspection GradleDynamicVersion
     implementation "com.facebook.react:react-native:+"  // From node_modules 总是匹配最新版本
-    // node_modules react-native使用库
-//    implementation project(':react-native-gesture-handler')
-//    implementation project(':react-native-safe-area-context')
 
     implementation "androidx.appcompat:appcompat:${versions.androidx_compat}"
     implementation "androidx.constraintlayout:constraintlayout:${versions.androidx_constraintlayout}"
@@ -151,11 +148,5 @@ dependencies {
     implementation "org.apache.commons:commons-compress:${versions.commons_compress}"
 }
 
-// Run this once to be able to run the application with BUCK
-// puts all compile dependencies into folder libs for BUCK to use
-task copyDownloadableDepsToLibs(type: Copy) {
-    from configurations.compile
-    into 'libs'
-}
-
+// ReactNative cli-platform-android 工具，构建项目自动构建node_modules中build.gradle。
 apply from: file("../../node_modules/@react-native-community/cli-platform-android/native_modules.gradle"); applyNativeModulesAppBuildGradle(project)
