--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,6 +25,7 @@
             android:configChanges="keyboard|keyboardHidden|orientation|screenSize|uiMode"
             android:label="@string/app_name"
             android:launchMode="singleTask"
+            android:exported="true"
             android:windowSoftInputMode="stateAlwaysHidden|adjustPan" />
 
         <activity android:name=".login.activity.LoginActivity" />
